# ChangeLog for media-libs/gegl
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/gegl/ChangeLog,v 1.102 2013/10/01 21:16:53 sping Exp $

  01 Oct 2013; Sebastian Pipping <sping@gentoo.org> gegl-0.2.0-r1.ebuild,
  gegl-0.2.0-r2.ebuild:
  Fix tests (bug #471990), thanks to David Leverton!

  25 Sep 2013; Agostino Sarubbo <ago@gentoo.org> gegl-0.2.0-r2.ebuild:
  Stable for ppc, wrt bug #481736

  23 Sep 2013; Agostino Sarubbo <ago@gentoo.org> gegl-0.2.0-r2.ebuild:
  Stable for sparc, wrt bug #481736

  23 Sep 2013; Agostino Sarubbo <ago@gentoo.org> gegl-0.2.0-r2.ebuild:
  Stable for ppc64, wrt bug #481736

  22 Sep 2013; Agostino Sarubbo <ago@gentoo.org> gegl-0.2.0-r2.ebuild:
  Stable for ia64, wrt bug #481736

  14 Sep 2013; Agostino Sarubbo <ago@gentoo.org> gegl-0.2.0-r2.ebuild:
  Stable for alpha, wrt bug #481736

  14 Sep 2013; Agostino Sarubbo <ago@gentoo.org> gegl-0.2.0-r2.ebuild:
  Stable for x86, wrt bug #481736

  14 Sep 2013; Agostino Sarubbo <ago@gentoo.org> gegl-0.2.0-r2.ebuild:
  Stable for amd64, wrt bug #481736

  09 Sep 2013; Jeroen Roovers <jer@gentoo.org> gegl-0.2.0-r2.ebuild:
  Stable for HPPA (bug #481736).

  03 Aug 2013; Markus Meier <maekke@gentoo.org> gegl-0.2.0-r2.ebuild:
  add ~arm, bug #473602

*gegl-0.2.0-r2 (04 Jul 2013)

  04 Jul 2013; Pacho Ramos <pacho@gentoo.org> +gegl-0.2.0-r2.ebuild:
  vala and introspection support is broken, bug #468208

  06 May 2013; Sebastian Pipping <sping@gentoo.org> gegl-0.2.0-r1.ebuild:
  Workaround missing gegl-0.2.deps file (bug #468248)

  02 May 2013; Agostino Sarubbo <ago@gentoo.org> gegl-0.2.0-r1.ebuild:
  Revert for sping's request

  02 May 2013; Agostino Sarubbo <ago@gentoo.org> gegl-0.2.0-r1.ebuild:
  Stable for amd64, wrt bug #464572

  01 May 2013; Sebastian Pipping <sping@gentoo.org> gegl-0.2.0-r1.ebuild:
  Restore use of virtual/ffmpeg for ffmpeg/libav (bug #467810)
