@@ -1,13 +1,0 @@
-DEFINED_PHASES=compile configure install prepare test
-DEPEND=>=media-libs/babl-0.1.10[introspection?] >=dev-libs/glib-2.28:2 >=x11-libs/gdk-pixbuf-2.18:2 x11-libs/pango sys-libs/zlib cairo? ( x11-libs/cairo ) ffmpeg? ( virtual/ffmpeg ) jpeg? ( virtual/jpeg ) jpeg2k? ( >=media-libs/jasper-1.900.1 ) openexr? ( media-libs/openexr ) png? ( media-libs/libpng ) raw? ( >=media-libs/libopenraw-0.0.5 ) sdl? ( media-libs/libsdl ) svg? ( >=gnome-base/librsvg-2.14:2 ) umfpack? ( sci-libs/umfpack ) introspection? ( >=dev-libs/gobject-introspection-0.10 >=dev-python/pygobject-2.26:2 ) lensfun? ( >=media-libs/lensfun-0.2.5 ) >=dev-util/intltool-0.40.1 dev-lang/perl virtual/pkgconfig >=sys-devel/libtool-2.2 vala? ( || ( dev-lang/vala:0.22[vapigen] dev-lang/vala:0.20[vapigen] dev-lang/vala:0.18[vapigen] dev-lang/vala:0.16[vapigen] dev-lang/vala:0.14[vapigen] ) ) >=sys-apps/sed-4 =sys-devel/automake-1.11* >=sys-devel/autoconf-2.68 sys-devel/libtool
-DESCRIPTION=A graph based image processing framework
-EAPI=4
-HOMEPAGE=http://www.gegl.org/
-IUSE=cairo debug ffmpeg introspection jpeg jpeg2k lensfun mmx openexr png raw sdl sse svg umfpack vala
-KEYWORDS=~alpha ~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~amd64-fbsd ~amd64-linux ~arm-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~x64-solaris ~x86-solaris
-LICENSE=|| ( GPL-3 LGPL-3 )
-RDEPEND=>=media-libs/babl-0.1.10[introspection?] >=dev-libs/glib-2.28:2 >=x11-libs/gdk-pixbuf-2.18:2 x11-libs/pango sys-libs/zlib cairo? ( x11-libs/cairo ) ffmpeg? ( virtual/ffmpeg ) jpeg? ( virtual/jpeg ) jpeg2k? ( >=media-libs/jasper-1.900.1 ) openexr? ( media-libs/openexr ) png? ( media-libs/libpng ) raw? ( >=media-libs/libopenraw-0.0.5 ) sdl? ( media-libs/libsdl ) svg? ( >=gnome-base/librsvg-2.14:2 ) umfpack? ( sci-libs/umfpack ) introspection? ( >=dev-libs/gobject-introspection-0.10 >=dev-python/pygobject-2.26:2 ) lensfun? ( >=media-libs/lensfun-0.2.5 )
-SLOT=0
-SRC_URI=ftp://ftp.gimp.org/pub/gegl/0.2/gegl-0.2.0.tar.bz2
-_eclasses_=autotools	16761a2f972abd686713e5967ff3c754	eutils	4878e7f88afc0ba0866ac112190b0fd4	gnome2-utils	b66c7c3889d2dd0913e9f3d2ac1c0859	libtool	b1c8688e60f9580bcb9bb46e08737eb1	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	89580da5ec17ad687fcde876c542b91e	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28	vala	b365480bc54c4e356dc1e953da9fe356	versionator	6601b4c5b3f019a993db59a50e1854e4
-_md5_=e2fc36af199ffb22722bf178c7d8530c
