@@ -1,0 +1,4 @@
+DIST lmctfy-0.1.0.tar.gz 2294616 SHA256 6d306a5630501a6723133b064ededfd942aa00a0dfa21155ebd5e07b07256624 SHA512 9cfa523fe04ef210f0700b8796700447aad839eceb448aafc3aff0a073b62d438fb6d3b8dee9b168358e3e1b7c2958f6db360dd78e20809b22b218cc14f555e7 WHIRLPOOL c9391f16f37bb0eaf7a20be3869a692f60aa40eb6b07d57f0ef61611c76b9e161f59f7f82ad90fb3eb2388f136ab29bad76ef182ba7147f5469ef6b561e3cdef
+EBUILD lmctfy-0.1.0.ebuild 885 SHA256 8a97d81f88455289962a3314142b891f83f7ca41799753c7b21a23e904f38196 SHA512 19d6e56c97e282c9ffd5f6ef4fcc4b86c1f3666eb0e3a963d25cf009f61141b6e26064a72afba273e98dc3c6b80ffe1540875ce0338472cef3d57ed2fcd01f6e WHIRLPOOL 99965b60f5777967f9ff62966078f7f9f3249e074bd4c0d6eca92fbd430292f79a1b539d41797966633ba17c0d648524646f2dfff81d4ecdcb6fc6250e121890
+MISC ChangeLog 368 SHA256 b4858d9f6e6248d9eecb4f8be9250c90c9f33c6fde8cb2f65de1a4bd3a55c3cd SHA512 f53599c7699c23d64ac3d83c65247eb3a4fdf6c01118c274f9042a3e9022413c2fc18152757260a63ae1c2a9ed50c7a1e10b59c9eeea25829df954b3a47e227f WHIRLPOOL c66f8660ea2979a122d328f8fd59462f2885c136e4e302460e8a7f3237a6b8c3124d125c07a9516814948685193bf98abebe36a687223a6b91ef0166d8ac97e0
+MISC metadata.xml 239 SHA256 57c79f6c1b1b06b8d90265f1cc0affe89b5548b63e811f0313bfb2a0a0aa201a SHA512 1898d4e8bb4f02ffdad555a095ee76f934bd6ee1f914564eac1932f0dd96f26a52f47047324ed0a81009516a84bf72e1b10922fa751f322abf17517f84f62156 WHIRLPOOL 7375ace29b0d9c7e945e141c09b70c79599780bc9d3478e59fbc85dc4330aeda6bf2bb54fde24d25feb181f88618e11e022a90674d1f26ff9ef692bd698ff754
