@@ -1,0 +1,9 @@
+# ChangeLog for sys-apps/lmctfy
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/lmctfy/ChangeLog,v 1.1 2013/10/27 02:20:18 patrick Exp $
+
+*lmctfy-0.1.0 (27 Oct 2013)
+
+  27 Oct 2013; Patrick Lauer <patrick@gentoo.org> +lmctfy-0.1.0.ebuild,
+  +metadata.xml:
+  Initial import, ebuild by me, fixes #486854
