@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/gegl
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/gegl/ChangeLog,v 1.102 2013/10/01 21:16:53 sping Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/gegl/ChangeLog,v 1.103 2013/10/27 01:39:27 sping Exp $
+
+  27 Oct 2013; Sebastian Pipping <sping@gentoo.org> -gegl-0.2.0-r1.ebuild:
+  Removing 0.2.0-r1 for security (bug #442016)
 
   01 Oct 2013; Sebastian Pipping <sping@gentoo.org> gegl-0.2.0-r1.ebuild,
   gegl-0.2.0-r2.ebuild:
